--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,3 @@
-*.log
-*.aux
-*.out
-*.dvi
-*.pdf
-*.ps
-*.dvi
-*.pdf
-*.ps
-*.bbl
-*.blg
-*.synctex.gz
-*.fdb_latexmk
-*.fls
-*.tgz
-*.bst
-*.dvi
-*.idx
-*.lof
-*.log
-*.toc
-.cm
-*.grm.desc
-*.grm.sig
-*.grm.sml
-*.lex.sml
-*.tmp
+_build/*
+abbot.install
+abbot_runtime.install
