add license, and minor example changes

--- a/examples/other/dune
+++ b/examples/other/dune
@@ -8,6 +8,21 @@
 
 (rule
  (targets
+  fpcpat_intf.ml
+  fpcpat.mli
+  fpcpat.ml
+  fpcpat.sig
+  fpcpat.sml)
+ (deps
+  (:abbot ../../bin/main.exe)
+  (:example fpcpat.abt))
+ (action
+  (progn
+   (run %{abbot} ocaml %{example})
+   (run %{abbot} sml %{example}))))
+
+(rule
+ (targets
   stlc_intf.ml
   stlc.mli
   stlc.ml
