--- a/abbot_runtime.opam
+++ b/abbot_runtime.opam
@@ -5,6 +5,7 @@ synopsis:
   "The runtime OCaml library needed by Abbot generated code (see package abbot)."
 maintainer: ["Bill Duff <wduff11@gmail.com>"]
 authors: ["Bill Duff <wduff11@gmail.com>" "Rob Simmons"]
+license: "Apache 2.0"
 homepage: "https://github.com/robsimmons/abbot"
 bug-reports: "https://github.com/robsimmons/abbot/issues"
 depends: [
